--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test ="shoppingList">
+			Home
+		</li>
+		<li data-ns-test ="shoppingList">
+			Wardrobe
+		</li>
+		<li data-ns-test ="shoppingList">
+			Skincare
+		</li>
+	</ol>
+	<ul>
+		<li data-ns-test ="holidayList">
+			Switzerland
+		</li>
+		<li data-ns-test ="holidayList">
+			America
+		</li>
+		<li data-ns-test ="holidayList">
+			UK
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
